# rust-ontogen

./: .gitignore  ARCHITECTURE-ASSESSMENT-2026-04-25-014130.md  ARCHITECTURE-FOLLOWUPS-2026-05-03.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  RELEASE.md  justfile  lease.json  package.json  pnpm-lock.yaml  release-plz.toml  release.toml  sdlc.yaml
.github/: FUNDING.yml
crates/markdown-pilot/: Cargo.toml  build.rs
crates/markdown-pilot/src/: lib.rs
crates/markdown-pilot/src/api/: mod.rs
crates/markdown-pilot/src/api/transport/http/: generated.rs
crates/markdown-pilot/src/schema/: mod.rs  note.rs  tag.rs  task.rs
crates/markdown-pilot/src/schema/dto/: mod.rs  note.rs  tag.rs  task.rs
crates/markdown-pilot/src/store/: mod.rs
crates/markdown-pilot/src/store/hooks/: mod.rs
crates/markdown-pilot/tests/: http_router.rs  smoke.rs
crates/markdown-store/: Cargo.toml  README.md
crates/markdown-store/examples/: relations.rs  roundtrip.rs  vault_crud.rs  wikilinks.rs
crates/markdown-store/src/: error.rs  frontmatter.rs  fsops.rs  id.rs  layout.rs  lib.rs  store.rs  walk.rs  wikilink.rs
crates/markdown-store/tests/: generated_call_pattern.rs
crates/ontogen-ts/: Cargo.toml
crates/ontogen-ts/src/: attr.rs  emit.rs  external.rs  lib.rs  order.rs  pool.rs  rename.rs  resolve.rs  types.rs
crates/ontogen-ts/tests/: end_to_end.rs  rename_roundtrip.rs
crates/ontogen-ts/tests/fixtures/: enum_c_style_emits_string_literal_union.ts  enum_empty_emits_never.ts  enum_rename_all_snake_case.rs  enum_single_variant_c_style.rs  enum_single_variant_c_style.ts  enum_struct_variant_externally_tagged.rs  enum_struct_variant_externally_tagged.ts  enum_tuple_variant_externally_tagged.rs  enum_tuple_variant_externally_tagged.ts  enum_tuple_variant_with_primitive_payload.rs  enum_tuple_variant_with_primitive_payload.ts  enum_variant_rename_wins_over_container.rs  enum_variant_rename_wins_over_container.ts  struct_field_containers.rs  struct_field_containers.ts  struct_field_ref_str.rs  struct_field_ref_str.ts  struct_field_rename_wins_over_container.rs  struct_field_rename_wins_over_container.ts  struct_field_rename_with_hyphen_quotes_key.rs  struct_field_rename_with_hyphen_quotes_key.ts  struct_field_serde_default_optional.rs  struct_field_serde_default_optional.ts  struct_field_serde_skip_drops_field.rs  struct_field_serde_skip_drops_field.ts  struct_field_smart_pointer_box_transparent.rs  struct_field_smart_pointer_box_transparent.ts  struct_field_unknown_ident_falls_through.rs  struct_field_unknown_ident_falls_through.ts  struct_named_fields_emit_export_type.rs  struct_named_fields_emit_export_type.ts  struct_rename_all_camel_case.rs  struct_rename_all_camel_case.ts  struct_with_all_primitive_field_types.rs  struct_with_all_primitive_field_types.ts
docs/: cli-generator.md  crate-extraction.md  id-string-constraint.md  markdown-backend-campaign.md  proposal.md  related-art.md  roadmap.md  tasks.md  walkthrough.md
examples/iron-log-md/: Cargo.toml  README.md  build.rs
examples/iron-log-md/data/vault/exercises/: back-squat.md
examples/iron-log-md/data/vault/workouts/: w-2026-06-01.md
examples/iron-log-md/generated-ts/: admin-registry.ts  transport.ts  types.ts
examples/iron-log-md/src/: lib.rs  main.rs
examples/iron-log-md/src/api/: mod.rs
examples/iron-log-md/src/api/transport/http/: generated.rs
examples/iron-log-md/src/schema/: exercise.rs  mod.rs  tag.rs  workout.rs  workout_set.rs
examples/iron-log-md/src/schema/dto/: exercise.rs  mod.rs  tag.rs  workout.rs
examples/iron-log-md/src/store/: mod.rs
examples/iron-log-md/src/store/hooks/: mod.rs
examples/iron-log/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
examples/iron-log/src-tauri/src/: lib.rs  main.rs
examples/iron-log/src-tauri/src/api/transport/http/: generated.rs
examples/iron-log/src-tauri/src/api/transport/ipc/: generated.rs
examples/iron-log/src-tauri/src/api/v1/: mod.rs  stats.rs
examples/iron-log/src-tauri/src/persistence/: mod.rs
examples/iron-log/src-tauri/src/persistence/db/: mod.rs
examples/iron-log/src-tauri/src/persistence/db/conversions/: mod.rs
examples/iron-log/src-tauri/src/persistence/db/entities/: mod.rs
examples/iron-log/src-tauri/src/persistence/fs_markdown/parser/: mod.rs  ontology.rs
examples/iron-log/src-tauri/src/schema/: exercise.rs  mod.rs  stats.rs  workout.rs
examples/iron-log/src-tauri/src/schema/dto/: exercise.rs  tag.rs  workout.rs  workout_set.rs
examples/iron-log/src-tauri/src/store/: mod.rs
examples/iron-log/src-tauri/src/store/hooks/: exercise.rs  mod.rs  workout.rs  workout_set.rs
examples/notes-kb/: Cargo.toml  README.md  build.rs
examples/notes-kb/data/vault/notes/: markdown-as-store.md  the-vault-is-the-database.md  wikilinks-are-edges.md
examples/notes-kb/generated-ts/: transport.ts  types.ts
examples/notes-kb/src/: lib.rs  main.rs
examples/notes-kb/src/api/transport/http/: generated.rs
examples/notes-kb/src/schema/: mod.rs  note.rs
examples/notes-kb/src/schema/dto/: mod.rs  note.rs
examples/notes-kb/src/store/: mod.rs
examples/notes-kb/src/store/hooks/: mod.rs  note.rs
examples/notes-kb/web/: index.html
examples/tasks-tracker/: Cargo.toml  README.md  build.rs
examples/tasks-tracker/data/vault/epics/: markdown-backend.md
examples/tasks-tracker/data/vault/tags/: codegen.md
examples/tasks-tracker/data/vault/tasks/: ship-the-emitter.md
examples/tasks-tracker/src/: lib.rs  main.rs
examples/tasks-tracker/src/api/transport/http/: generated.rs
examples/tasks-tracker/src/api/transport/mcp/: generated.rs
examples/tasks-tracker/src/schema/: epic.rs  mod.rs  task.rs
examples/tasks-tracker/src/schema/dto/: epic.rs  mod.rs  task.rs
examples/tasks-tracker/src/store/hooks/: epic.rs  mod.rs  tag.rs  task.rs
ontogen-core/: Cargo.toml
ontogen-macros/: Cargo.toml
ontogen-macros/src/: lib.rs
scripts/: bring_up_to_date_all.sh  cousins.json
site/: astro.config.mjs  package-lock.json  package.json
src/: admin.rs  ir.rs  lib.rs  pipeline.rs  snapshots.rs
(+231 files in other folders)
