[workspace]

[package]
name = "iron-log"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "iron_log"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
ontogen = { path = "../../../" }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
specta = { version = "=2.0.0-rc.23", features = ["derive", "function"] }
schemars = "0.8"
ontogen-macros = { path = "../../../ontogen-macros" }
thiserror = "2"
